# lambda-core

./: CMakeLists.txt  controller.cpp  pycontroller.py
examples/CAT/: Makefile  allocation_app  association_app  reset_app
